fix location icon cropped, bump asset version on css

--- a/user/themes/imaginarious/css-compiled/template-customized.css
+++ b/user/themes/imaginarious/css-compiled/template-customized.css
@@ -821,7 +821,7 @@ ul.pagination {
 }
 
 .s-time {
-  font-size: 1rem;
+  font-size: 1.2rem;
   line-height: 2rem;
   font-weight: 500;
   text-transform: uppercase;
@@ -833,14 +833,14 @@ ul.pagination {
   background-size: cover;
   margin-right: 3px;
   display: inline-block;
-  width: 1rem;
-  height: 1rem;
+  width: 14px;
+  height: 14px;
   position: relative;
   top: 2px;
 }
 
 .s-location {
-  font-size: 0.75rem;
+  font-size: 1rem;
   line-height: 2.5rem;
   font-weight: 500;
   text-transform: uppercase;
@@ -853,7 +853,7 @@ ul.pagination {
   margin-right: 3px;
   display: inline-block;
   width: 1rem;
-  height: 1rem;
+  height: 1.4rem;
   position: relative;
   top: 2px;
 }
