--- a/user/themes/imaginarious/scss/template-customized/_programme.scss
+++ b/user/themes/imaginarious/scss/template-customized/_programme.scss
@@ -113,7 +113,7 @@ $content-p-v: 32px;
 }
 
 .s-time {
-	font-size: 1rem;
+	font-size: 1.2rem;
 	line-height: 2rem;
 	font-weight: $core-font-weight-medium;
 	text-transform: uppercase;
@@ -125,15 +125,15 @@ $content-p-v: 32px;
 		background-size: cover;
 		margin-right: 3px;
 		display: inline-block;
-		width: 1rem;
-		height: 1rem;
+		width: 14px;
+		height: 14px;
 		position: relative;
 		top: 2px;
 	}
 }
 
 .s-location {
-	font-size: 0.75rem;
+	font-size: 1rem;
 	line-height: 2.5rem;
 	font-weight: $core-font-weight-medium;
 	text-transform: uppercase;
@@ -146,7 +146,7 @@ $content-p-v: 32px;
 		margin-right: 3px;
 		display: inline-block;
 		width: 1rem;
-		height: 1rem;
+		height: 1.4rem;
 		position: relative;
 		top: 2px;
 	}
